changed the footer content, fixed the potential-causes page footnote align

--- a/frontend/src/styles/pages/_patient-demographics.scss
+++ b/frontend/src/styles/pages/_patient-demographics.scss
@@ -237,7 +237,9 @@ body.patient-demographics {
             width: 121px;
             margin-right: 30px;
             text-align: center;
-            margin-left: -50px;
+            @include mq('lg') {
+                margin-left: -50px;
+            }
 
             .percent {
                 color: #FDBD3E;
